# robotics_project

./: .gitignore  README.md  path_planner_new_iteration.py  test.py
Node draft/: Node_template.py
Path_planning/: irob_lab1.py
arm/: CMakeLists.txt  package.xml
arm/action/: Arm.action
arm/msg/: PickUpTarget.msg  pick_up_target.msg
arm/src/: arm.py  arm_actions.py  arm_services.py  kinematics.py  yeet.py
arm/srv/: ArmTrigger.srv  SetPickUpTarget.srv  Target.srv
arm_camera/: CMakeLists.txt  package.xml
arm_camera/src/: arm_camera.py
autotune/: CMakeLists.txt  package.xml
autotune/src/: autotune.py
brain/: CMakeLists.txt  package.xml  setup.py
brain/src/: brain_node.py  pathing_brain_node.py  tests.ipynb
brain/src/behavior_tree/: behavior_tree.py
cartesian_control/: CMakeLists.txt  package.xml
cartesian_control/src/: cartesian_controller.py  cartesian_controller_auto_tune_omega_pid.py  cartesian_controller_in_progress.py  cartesian_controller_one_for_each_wheel.py  cartesian_controller_two_pid copy.py
cmd_vel_to_motors/: CMakeLists.txt  package.xml
cmd_vel_to_motors/src/: Fuzzy_controller_to_motor.py  PID_and_extra.py  cmd_vel_to_motors.py  cmd_vel_to_motors_PID.py
detection/: CMakeLists.txt  package.xml  setup.py
detection/msg/: BoundingBox.msg  BoundingBoxArray.msg  ObjectInstance.msg  ObjectInstanceArray.msg
detection/src/: arm_camera_services.py  detection copy 2.py  detection copy.py  detection.py  display_markers.py  object_classification.py  object_computations.py  obstacle_detection.py  remove_old_instances.py
detection/src/detection/: detector.py
detection/src/dl_detection/: detector.py  test_inference.py  train.py
detection/src/rgb_detection/: rgb_detection.py
legacy/: autotune.py  cartesian_controller copy 2.py  cartesian_controller copy 3.py  cartesian_controller copy.py  cartesian_controller.py  cartesian_controller_auto_tune_omega_pid copy.py
localization/: CMakeLists.txt  package.xml
localization/src/: aruco_marker_filter_node.py  ekf_slam.py  ekf_slam_v2.py  ekf_slam_v3.py  example_workspace.tsv  localization.py  logg.md  map_keeper.py  odom_init.py  odom_init_old.py  odom_updater.py  test_workspace.tsv  workspace_manager.py
mapping/: CMakeLists.txt  package.xml  setup.py
mapping/msg/: GridMap.msg  GridMapMsg.msg
mapping/src/: mapping.py  mapping_node.py  mapping_old.py  workspace.tsv  workspace_manager.py  workspace_polygon.py  workspace_test.tsv
mapping/srv/: CheckPolygon.srv
odometry/: CMakeLists.txt  package.xml
odometry/include/: odometry.launch
odometry/src/: ekf_odom.py  ekf_odom_backup.py  ekf_odom_v2.py  odometry.py  odometry_mixed_imu.py  readme.md  wheel_enco_to_odom_msg.py
open_loop_control/: CMakeLists.txt  package.xml
open_loop_control/src/: open_loop_controller.py  test.py
path_planner/: CMakeLists.txt  package.xml  pure_persuit.py
path_planner/src/: A_star.py  A_star_alg.py  A_star_testing.py  Astar_integrated.py  RRT.py  chatGPT_astar.py  explorer.py  explorer_turn.py  occupancy_grid.py  old_A_star.py  path_planner.py  path_planner.rviz  path_planner_global_local.py  path_planner_new_iteration.py  path_planner_node.py  path_tracker.py  path_tracker_client.py  path_tracker_correct.py  path_tracker_poly_service.py  path_tracker_pure_pursuit.py  path_tracker_server.py  path_tracker_server_brain.py  path_tracker_v1.py  path_tracker_v2.py  static_movement_services.py  test.py  tracker_backup.py
robot_localization/launch/: imu_enco_odom.launch  odometry_test.launch
robot_localization/params/: imu_enco_odom.yaml  imu_odom.yaml
robotics_project-3bf8bc15438f1852654a43bdeb6b0ba9620a85b0/detection/: package.xml
robotics_project-3bf8bc15438f1852654a43bdeb6b0ba9620a85b0/odometry/: CMakeLists.txt
robotics_project-3bf8bc15438f1852654a43bdeb6b0ba9620a85b0/robp_launch/: CMakeLists.txt  package.xml
robotics_project-3bf8bc15438f1852654a43bdeb6b0ba9620a85b0/robp_robot/robp_msgs/: package.xml
robotics_project-3bf8bc15438f1852654a43bdeb6b0ba9620a85b0/robp_robot/robp_msgs/msg/: DutyCycles.msg
robp_arm/: README.md
robp_launch/: boot_camp_part1.launch  boot_camp_part1.rviz
robp_launch/config/: mapping.rviz  odometry.rviz  path_planner.rviz  perception.rviz
robp_launch/include/: cmd_vel_test.launch  loc_test.launch  localization.launch  mil1.launch  mil1_rosbag.launch  perception.launch  perception_rosbag.launch  rs_camera.launch  teleop.launch  test_PID.launch  vision_rosbag.launch
robp_launch/launch/: cmd_vel_test.launch  explorer_map.launch  go_to_point_test.launch  loc_test.launch  map_test.launch  mil1.launch  mil1_rosbag.launch  mini_milestone_1.launch  mini_milestone_2.launch  odom_test.launch  path_planner_test.launch  path_tracker.launch  pathing_brain_tester.launch  perception.launch  perception_rosbag.launch  rviz_pathplanner.launch  teleop.launch  test_PID.launch  test_pure_pursuit.launch
robp_msgs/msg/: Encoders.msg
robp_phidgets/: CMakeLists.txt  package.xml
robp_phidgets/cfg/: Logging.cfg  Spatial.cfg
robp_phidgets/include/robp_phidgets/: encoder.h  logging_nodelet.h  motor.h  motors_nodelet.h  spatial.h  spatial_nodelet.h
robp_phidgets/launch/: logging.launch  motors.launch
robp_phidgets/src/: encoders.cpp  spatial_nodelet.cpp  temperature.cpp
robp_robot/robp_msgs/: CMakeLists.txt  README.md
speak/: CMakeLists.txt  package.xml
speak/src/: speaker.py
teleop/teleop_arm/: CMakeLists.txt  package.xml
teleop/teleop_twist_keyboard/: teleop_twist_keyboard.py
templates/: node.py
(+63 files in other folders)
